# jetpack

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yaml
src/jetpack/: config.py  log_config.py  responses.py
src/jetpack/errors/: __init__.py  exception_handlers.py
tests/: conftest.py  test_config.py  test_errors.py  test_exception_handlers.py  test_log_config.py  test_responses.py
