[project]
name = "jetpack"
version = "0.2.0"
description = "Project Utilities to kickstart a micro-service."
readme = "README.md"
authors = [
    { name = "Faizan Azim", email = "faizanazim11@gmail.com" },
    { name = "Irfanuddin Shafi Ahmed", email = "irfanuddinshafi@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "whenever>=0.6.15",
]

[project.optional-dependencies]
apis = [
    "fastapi>=0.115.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.3",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/scripts/constants/*",
    "*/scripts/db/*",
    "app.py",
    "main.py",
]
